# aula08_funcoes_python_parte2

./: README.md  etl.py  pipeline.py  pyproject.toml
