[project]
name = "aula08-funcoes-python-parte2"
version = "0.1.0"
description = ""
authors = [
    {name = "danilovieira37",email = "danilovieira37@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
